Use newer zope.app.exception and restore test.

--- a/tox.ini
+++ b/tox.ini
@@ -1,10 +1,10 @@
 [tox]
-envlist = py27,py35,py36,pypy
+envlist = py27,py34,py35,py36,pypy
 
 [testenv]
 commands =
     zope-testrunner --test-path=src []
 deps =
-    git+https://github.com/zopefoundation/zope.app.http.git@put-content-type#egg=zope.app.http
+    git+https://github.com/zopefoundation/zope.app.http.git#egg=zope.app.http
     .[test]
-# XXX: Remove when https://github.com/zopefoundation/zope.app.http/pull/2 is fixed
+# XXX: Remove when https://github.com/zopefoundation/zope.app.http/pull/2 is released
