--- a/.travis.yml
+++ b/.travis.yml
@@ -2,6 +2,7 @@ language: python
 sudo: false
 python:
   - 2.7
+  - 3.4
   - 3.5
   - 3.6
   - pypy-5.4.1
@@ -16,8 +17,8 @@ notifications:
 install:
   - pip install -U pip setuptools
   - pip install -U coveralls coverage
-# XXX: Remove when https://github.com/zopefoundation/zope.app.http/pull/2 is fixed
-  - pip install git+https://github.com/zopefoundation/zope.app.http.git@put-content-type#egg=zope.app.http
+# XXX: Remove when https://github.com/zopefoundation/zope.app.http/pull/2 is released
+  - pip install git+https://github.com/zopefoundation/zope.app.http.git#egg=zope.app.http
   - pip install -U -e ".[test]"
 
 
